--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_primary">#001B78</color>
+    <color name="red_primary">#FF0000</color>
+    <color name="green_primary">#00FF00</color>
+    <color name="card_background">#F2F2F2</color>
+
 </resources>
